--- a/baru.html
+++ b/baru.html
@@ -10,5 +10,48 @@
 <body>
     <h1>Muhammad Mulana Ramadan Purnama</h1>
     <img src="img/foto.jpeg" alt="" width="323" height="432">
+    <h3>perkenalkan nama saya Muhammad Mulana Ramadan Purnama. 
+        Saya berasal dari Universitas Udayana. Disini saya menjadi peserta SIB SEAL. 
+        Belakangan ini begitulah ada sesuatu yang membuat rasa nasi menjadi lebih enak.</h3>
+    
+     <!--ini adalah cara intukmasak nasi-->
+   <h2>Keahlian Saya</h2>
+   <ol>
+       <li>UI/UX Designer</li>
+       <li>Figma</li>
+       <li>CorelDraw</li>
+       <li>FL Studio</li>
+   </ol>
+   <h2>Pendidikan Saya</h2>
+   <ul>
+       <li>SD Muhammadiyah 3 Denpasar</li>
+       <li>SMP Sapta Andika Denpasar</li>
+       <li>SMAK Santo Yoseph Denpasar</li>
+       <li>Universitas Udayana</li>
+   </ul>
+
+   <table border="1">
+        <tr>
+            <th>company</th>
+            <th>address</th>
+            <th>country</th>
+        </tr>
+        <tr>
+            <th>company</th>
+            <th>address</th>
+            <th>country</th>
+        </tr>
+        <tr>
+            <th>company</th>
+            <th>address</th>
+            <th>country</th>
+        </tr>
+   </table>
+   <hr>
+   <h2> Kontak Saya</h2>
+   <a href="https://google.com">Instagram</a>
+   <br>
+   <a href="link.html">Facebook</a>
+
 </body>
 </html>
